syntax = "proto3";
package ch.ubique.notifyme.sdk.backend.model;
option java_package = "ch.ubique.notifyme.sdk.backend.model";

message PreTrace {
  bytes identity = 1;
  bytes partialSecretKeyForIdentityOfLocation = 2;
  bytes cipherTextHealthAuthority = 3;
  string message = 4;
  bytes notificationKey = 5;
}

message TraceProof {
  bytes masterPublicKey = 1;
  bytes nonce1 = 2;
  bytes nonce2 = 3;
}

message PreTraceWithProof {
  PreTrace preTrace = 1;
  TraceProof proof = 2;
  bytes info = 3;
}